translated russian parts to english in cv.tex

--- a/cv.tex
+++ b/cv.tex
@@ -62,64 +62,87 @@
 
 \section{Summary}
 \begin{tabular}{p{0.9\textwidth}}
-  I’m a software engineer with 10 years of experience with .NET platform in a creating commercial components for business application developers in a global product company. I have been working on Rich Text Editor and Spreadsheet product. We implemented a tons of tricky algorithms, recreated MS Word and Excel in a .NET platform with a love to reliability, quality, performance, and attention to details. Developed several web projects such as company sales platform, file conversion service, sales analytics dashboards. \\\\
-  I’m familiar with various languages, tools, paradigms such as OOP, functional programming, and TDD. At the same time, I always try to find the best solution and choose the necessary instrument for a specific task. By knowing several ecosystems (.NET, Node.js, JavaScript), I can find the best solution to complex problems. I can quickly get up to speed, learn new technologies, but at the same time I have sufficient experience and pragmatism to understand when existing solutions are more appropriate.\\\\
+  I’m a software engineer with 10 years of experience with .NET platform in a creating
+  commercial components for business application developers in a global product company. 
+  I have been working on Rich Text Editor and Spreadsheet product.
+  % We implemented  a tons of tricky algorithms, recreated MS Word and Excel in a .NET platform with 
+  % a love to reliability, quality, performance, and attention to details. 
+  Developed several web projects such as company sales platform, file conversion service, 
+  sales analytics dashboards.\\\\
+  I’m familiar with various languages, tools, paradigms such as OOP, functional programming, and TDD.
+  At the same time, I always try to find the best solution and choose the necessary instrument 
+  for a specific task. By knowing several ecosystems (.NET, Node.js, JavaScript), 
+  I can find the best solution.\\\\
+  % I can quickly get up to speed, learn new technologies, and at the same time I have sufficient experience and pragmatism to understand when existing solutions are more appropriate.
   
-  Interests: \sotag{distributed systems} \sotag{node.js} \sotag{functional-programming} \sotag{haskell} \sotag{cloud computing}
+  Interests: \sotag{crdt} \sotag{user interface} \sotag{distributed systems} \sotag{node.js} \sotag{functional-programming} \sotag{haskell} \sotag{cloud computing} \sotag{software performance} \sotag{realtime collaboration}
 \end{tabular}
 
 \section{Work Experience}
 \begin{longtable}{r|p{0.72\textwidth}}
   \textsc{Nov 2017--Sep 2018} & \job{Fullstack Software Engineer}{DevExpress} (Infrastructure Team) \\(11 months)
-    &\sotag{c\#} \sotag{.net} \sotag{asp.net mvc} \sotag{ms sql server} \sotag{powershell} \sotag{teamcity} \sotag{rabbitmq} \\&\\
+    &\sotag{c\#} \sotag{.net} \sotag{soa} \sotag{asp.net mvc} \sotag{ms sql server} \sotag{security} \sotag{powershell} \sotag{rabbitmq}\\&\\
     
     &Maintained company CRM that integrates with site online shop, manages licenses, orders, resellers, subscriptions, payments, email newsletters, product releases, HRM\\&\\
-    &За короткий период разобрался в проектах, написанных в разное время с разными технологиями и смог быстро включиться в разработку и приносить пользу, работая с критическими для бизнеса системами\\&\\
-    &Активно участвовал в подготовке всей инфраструктуры компании (десятки сервисов) чтобы правильно работать с персональными данными так, как прописано в законе GDPR\\&\\
-    &Ускорил CI pipeline с e2e testing работающий на TeamCity с 2 часов до 50 минут\\&\\
-    &Нашел security проблему, с помощью которой можно было скачать все данные о продажах за всё время\\&\\
-    &Отрефакторил около 100 e2e тестов на TestCafe что позволило перейти на новую версию дизайна checkout flow на сайте http://devexpress.com/buy/net/ \\&\\
-    &Оптимизировал затраты на \$ 680 000 в Google AdWords\\&\\\sep
-    \hline
-    \multicolumn{2}{r}{\footnotesize\itshape (cont. on the next page)}\\\sep
-  \newpage
-  
-  \textsc{Jan 2017--Apr 2017} & \job{Senior Software Engineer}{DevExpress} (Cloud file conversion service)\\(4 months)
+    &In a short period, I figured out projects written on different technologies and could quickly start to bring value.\\
+    &Optimized costs for \$680000 in corporate Google AdWords.\\
+    &Found a security problem that allows anyone to see all-time sales data.\\
+    &Prepared company infrastructure and services for GDPR compliance.\\
+    &Speed up release pipeline (TeamCity CI) with E2E testing from 120 to 50 minutes, which increased the productivity of the team and simplified deployment.\\
+    &Member of the on-call rotation.\\\sep
+    % \hline
+    % \multicolumn{2}{r}{\footnotesize\itshape (abbreviated work history below, see LinkedIn profile for full details)}\\\sep
+    \textsc{Jan 2017--Apr 2017} & \job{Senior Software Engineer}{DevExpress} (Cloud file conversion service)\\(4 months)
     &\sotag{ms azure} \sotag{asp .net mvc} \sotag{javascipt} \sotag{ux prototype} \sotag{google-analytics} \sotag{html} \sotag{css}\\&\\ 
-    &An office document formats converter service, hosted in Azure Cloud Service VM. It uses DevExpress office file api library, written in .Net 4.6.\\\sep
+    &An office document formats converter service, hosted in Azure Cloud Service VM.
+    It uses DevExpress office file api library, written in .Net 4.6.\\\sep
 
   \textsc{Apr 2016--Aug 2016} & \job{Node.js Developer}{DevExpress} (Analytics Team), Russia \\(4 months)
     &\sotag{node.js} \sotag{mongodb} \sotag{docker} \sotag{aws} \sotag{react.js} \sotag{javascript} \sotag{kinesis firehose}\\&\\
-    &Part time project of building Analytics dashboard and Streaming data pipeline using Amazon Kinesis, reSolve lib for backend (Event Sourcing, CQRS, DDD) and UI on React.js/Redux.\\
-    &Implemented a customer retention chart\\
-    &Created a React/Node.js project structure template\\
-    &Added OpenID connect authentication\\\sep
+    &Part time project of building Analytics dashboard and Streaming data pipeline using Amazon Kinesis, reSolve lib for backend (Event Sourcing, CQRS, DDD).\\
+    &Implemented a customer retention chart using React.js/Redux.\\
+    % &Created a React.js/Node.js project structure template.\\
+    &Added OpenID connect authentication.\\\sep
+    \hline
+    \multicolumn{2}{r}{\footnotesize\itshape (cont. on the next page)}\\\sep
+  \newpage
 
   \textsc{May 2012--Nov 2017} & \job{Senior Software Engineer}{DevExpress} (Spreadsheet Team), Russia \\(5 years, 6 months)
     &\sotag{c\#} \sotag{.net} \sotag{algorithms} \sotag{data structures} \sotag{performance} \sotag{design patterns} \sotag{excel}\\&\\
-    &Developed a Spreadsheet component from the first lines of code and actively participated in product decisions and analytics\\
-    &Developed a high performance and full-functional API to work with spreadsheet\\
-    &Перевёл команду на работу с Git и ввел практику code review\\
-    &Производил сравнение с конкурентами, по многим параметрам\\
-    &Улучшил производительность часто используемых операций и устранил многие утечки памяти\\
-    &Реализовал Cut, Copy and Paste Operations и создал 20 тысяч тестов\\\sep
+    &Developed a Spreadsheet component from the first lines of code and actively participated in product decisions and analytics.\\
+    &Developed a high performance and full-functional API to work with spreadsheet.\\
+    &Coached a team to work with Git and introduced code review practice.\\
+    &Compared the product with competitors in many aspects: features, reliability, and performance.\\
+    &Improved performance of frequently used operations and fixed many memory leaks.\\
+    &Implemented one of high-impact features Cut, Copy and Paste Operations and created 20 000 tests.\\
+    &Mentored 4 new members of the team.\\\sep
  
   \textsc{Aug 2009--May 2012} & \job{Software Engineer}{DevExpress} (RichEdit Team), Russia \\(2 years, 9 months)
     &\sotag{c\#} \sotag{ms word} \sotag{api} \sotag{component} \sotag{wpf} \sotag{winforms} \sotag{xml} \sotag{docx} \sotag{doc} \sotag{rtf} \sotag{html} \\&\\
-    &Участвовал в 8 релизах of Rich Text Editor component.\\
-    &Реализовал поддержку OpenDocument Format (.odt), WordprocessingML Format\\
-    &Добавил поддержку таблиц и нумерованных списков импорт, экспорт из HTML формата\\
-    &Создал Style Gallery в меню для RichEdit for WPF\\
-    &Разработал инструмент для регрессивного тестирования\\\sep
+    &Actively participated in 8 releases of Rich Text Editor component.\\
+    &Implemented support of OpenDocument (.odt) and WordprocessingML file formats.\\
+    &Added support for tables and numbered lists to import, export from HTML format.\\
+    &Created a Style Gallery in Ribbon menu for wpf version of RichEdit.\\
+    &Developed a tool for regression testing that drastically increase reliability.\\\sep
 \end{longtable}
 
 \section{Programming Proficiency}
 \begin{tabular}{rl}
-  \textsc{Languages:}& Scala, C\# (proficient), Haskell (intermediate), F\#, OCaml (familiar), Rust, Python (learning)\\
-  \textsc{Patterns:}& FP, OOP, ES/CQRS, DDD, TDD, Property-based testing\\
-  \textsc{Libraries:}& http4s, ZIO, Cats, Cats-Effect, Circe, Refined, Doobie, PureConfig, Specs2, ScalaCheck\\
-  \textsc{Tools:}& Bazel, SBT, IntelliJ SDK, Nix, Docker, TeamCity\\
-  \textsc{Misc:}& Category Theory, abstract algebra (learning)
+  \textsc{Languages:}& C\# (proficient), JavaScript (ES6) (proficient), Scala, Haskell (learning), Dart, Rust (planning) \\
+  \textsc{Patterns:}& OOP, FP, ES/CQRS, DDD, TDD\\
+  \textsc{Libraries:}& .Net, asp.net core, NestJS (learning)\\
+  \textsc{Web Prog:}& HTML, CSS, React.js, Webpack, accessibility and web performance\\
+  \textsc{DataBases:}& MS SQL Server\\
+  % \textsc{Security:}& AuthN/AuthZ/OpenID connect\\
+  % \textsc{CI/CD:} Teamcity, Jenkins, Gitlab
+  \textsc{Tools:}& Git, Visual Studio, npm, dotTrace, dotMemory, Docker, TeamCity\\
+  % \testsc{Operating Systems:}&OS X, Linux, Windows\\
+  % \testsc{:}&\\
+  % \textsc{Misc:}& Category Theory, abstract algebra (learning)
+  % \textsc{Misc:}& Agile (Scrum, Kanban),
+  % Distributed computing / cloud computing
+  % Asynchronous network programming
+  % Multi-threaded programming
 \end{tabular}
 
 \section{Skills and Accomplishments}
