fix typos and make private package

--- a/cv.tex
+++ b/cv.tex
@@ -75,12 +75,12 @@
   I can find the best solution.\\\\
   % I can quickly get up to speed, learn new technologies, and at the same time I have sufficient experience and pragmatism to understand when existing solutions are more appropriate.
   
-  Interests: \sotag{crdt} \sotag{user interface} \sotag{distributed systems} \sotag{node.js} \sotag{functional-programming} \sotag{haskell} \sotag{cloud computing} \sotag{software performance} \sotag{realtime collaboration}
+  Interests: \sotag{crdt} \sotag{user interface} \sotag{distributed systems} \sotag{node.js} \sotag{functional-programming} \sotag{haskell} \sotag{cloud computing} \sotag{software performance} \sotag{realtime collaboration} \sotag{developer experience} \sotag{api design}
 \end{tabular}
 
 \section{Work Experience}
 \begin{longtable}{r|p{0.72\textwidth}}
-  \textsc{Nov 2017--Sep 2018} & \job{Fullstack Software Engineer}{DevExpress} (Infrastructure Team) \\(11 months)
+  \textsc{Nov 2017--Sep 2018} & \job{Full stack Software Engineer}{DevExpress} (Infrastructure Team) \\(11 months)
     &\sotag{c\#} \sotag{.net} \sotag{soa} \sotag{asp.net mvc} \sotag{ms sql server} \sotag{security} \sotag{powershell} \sotag{rabbitmq}\\&\\
     
     &Maintained company CRM that integrates with site online shop, manages licenses, orders, resellers, subscriptions, payments, email newsletters, product releases, HRM\\&\\
@@ -90,10 +90,11 @@
     &Prepared company infrastructure and services for GDPR compliance.\\
     &Speed up release pipeline (TeamCity CI) with E2E testing from 120 to 50 minutes, which increased the productivity of the team and simplified deployment.\\
     &Member of the on-call rotation.\\\sep
+    % Reduce cost of maintainence by refactoring legacy code according to a new standards and best practices
     % \hline
     % \multicolumn{2}{r}{\footnotesize\itshape (abbreviated work history below, see LinkedIn profile for full details)}\\\sep
     \textsc{Jan 2017--Apr 2017} & \job{Senior Software Engineer}{DevExpress} (Cloud file conversion service)\\(4 months)
-    &\sotag{ms azure} \sotag{asp .net mvc} \sotag{javascipt} \sotag{ux prototype} \sotag{google-analytics} \sotag{html} \sotag{css}\\&\\ 
+    &\sotag{ms azure} \sotag{asp.net mvc} \sotag{javascript} \sotag{ux prototype} \sotag{google-analytics} \sotag{html} \sotag{css}\\&\\ 
     &An office document formats converter service, hosted in Azure Cloud Service VM.
     It uses DevExpress office file api library, written in .Net 4.6.\\\sep
 
