remove .net staff that does not matter now

--- a/cv.tex
+++ b/cv.tex
@@ -141,14 +141,15 @@
 
 \section{Programming Proficiency}
 \begin{tabular}{rl}
-  \textsc{Languages:}& C\# (proficient), JavaScript (ES6) (proficient), Scala, Haskell (learning), Dart, Rust (planning) \\
-  \textsc{Patterns:}& OOP, FP, ES/CQRS, DDD, TDD\\
-  \textsc{Libraries:}& .Net, asp.net core, NestJS (learning)\\
-  \textsc{Web Prog:}& HTML, CSS, React.js, Webpack, accessibility and web performance\\
-  \textsc{DataBases:}& MS SQL Server\\
+  \textsc{Languages:}& GO, C\#, JavaScript (ES6)\\
+  \textsc{Patterns:}& DDD, TDD, ES/CQRS\\
+  \textsc{Libraries:}& \\
+  % \textsc{Web Prog:}& HTML, CSS, React.js, Webpack, accessibility and web performance\\
+  \textsc{DataBases:}& PostgreSQL\\ %MS SQL Server\\
   % \textsc{Security:}& AuthN/AuthZ/OpenID connect\\
   % \textsc{CI/CD:} Teamcity, Jenkins, Gitlab
-  \textsc{Tools:}& Git, Visual Studio, npm, dotTrace, dotMemory, Docker, TeamCity\\
+  % \textsc{Tools:}& Git, Visual Studio, npm, dotTrace, dotMemory, Docker, TeamCity\\
+  \textsc{Tools:}& docker, git\\
   % \testsc{Operating Systems:}&OS X, Linux, Windows\\
   % \testsc{:}&\\
   % \textsc{Misc:}& Category Theory, abstract algebra (learning)
