add javascript.ninja master classes

--- a/cv.tex
+++ b/cv.tex
@@ -167,6 +167,9 @@
 \section{Specializations}
 \begin{tabular}{rl}
   \textsc{Courses:}
+  &CI/CD for frontend-engineer master-class | javascript.ninja \\
+  &GraphQL for frontend-engineer master-class | javascript.ninja \\
+  &Unit-testing JS master-class | javascript.ninja \\
   &Functional Programming Principles in Scala | Coursera\\
   &Learning How to Learn | Coursera\\
 \end{tabular}
