try make single page resume

--- a/cv.tex
+++ b/cv.tex
@@ -13,7 +13,7 @@
 \usepackage{lastpage}
 \pagestyle{fancy}
 \fancyfoot[L]{Denis Khranovskiy}
-\fancyfoot[C]{Page \thepage\ of 2} %\pageref*{LastPage}
+\fancyfoot[C]{Page \thepage\ of 1} %\pageref*{LastPage}
 \fancyfoot[R]{\today}
 \renewcommand{\footrulewidth}{0.4pt}% default is 0pt
 \fancyhead{}
@@ -62,20 +62,24 @@
 
 \section{Summary}
 \begin{tabular}{p{0.9\textwidth}}
-  I’m a software engineer with 10 years of experience with .NET platform in a creating
+  I’m a software engineer with 10+ years of experience with .NET platform in a creating
   commercial components for business application developers in a global product company. 
-  I have been working on Rich Text Editor and Spreadsheet product.
+  % I have been working on Rich Text Editor and Spreadsheet product.
+
   % We implemented  a tons of tricky algorithms, recreated MS Word and Excel in a .NET platform with 
   % a love to reliability, quality, performance, and attention to details. 
-  Developed several web projects such as company sales platform, file conversion service, 
-  sales analytics dashboards.\\\\
-  I’m familiar with various languages, tools, paradigms such as OOP, functional programming, and TDD.
-  At the same time, I always try to find the best solution and choose the necessary instrument 
-  for a specific task. By knowing several ecosystems (.NET, Node.js, JavaScript), 
-  I can find the best solution.\\\\
+  
+  % Developed several web projects such as company sales platform, file conversion service, 
+  % sales analytics dashboards.\\ %\\
+  
+  % I’m familiar with various languages, tools, paradigms such as OOP, functional programming, and TDD.
+  % At the same time, I always try to find the best solution and choose the necessary instrument 
+  % for a specific task. By knowing several ecosystems (.NET, Node.js, JavaScript), 
+  % I can find the best solution.\\ %\\
+
   % I can quickly get up to speed, learn new technologies, and at the same time I have sufficient experience and pragmatism to understand when existing solutions are more appropriate.
   
-  Interests: \sotag{crdt} \sotag{user interface} \sotag{distributed systems} \sotag{node.js} \sotag{functional-programming} \sotag{haskell} \sotag{cloud computing} \sotag{software performance} \sotag{realtime collaboration} \sotag{developer experience} \sotag{api design}
+  % Interests: \sotag{crdt} \sotag{user interface} \sotag{distributed systems} \sotag{node.js} \sotag{functional-programming} \sotag{haskell} \sotag{cloud computing} \sotag{software performance} \sotag{realtime collaboration} \sotag{developer experience} \sotag{api design}
 \end{tabular}
 
 \section{Work Experience}
@@ -85,11 +89,9 @@
     &Product is the telecommunications core of VOIP telephony. Billions of calls, 70 million mobile unique numbers serviced per year.\\&\\
     &Led 2 teams of 5 people, grew the team from 2 to 10 a year\\
     &Maintained 10+ services and 2 concurrently active projects\\
-    &Mentored junior/middle developers\\
-    &Bring 1:1 meetings with employees\\
-    &Interviewed candidates\\
-    &Made an onboarding guide\\
-    &made a service template on the go for future services.\\\sep
+    &Mentored junior/middle developers, made an onboarding guide \\
+    &Bring 1:1 meetings to a team\\
+    &Created a golang service template for future services.\\\sep
 
   \textsc{Nov 2017--Sep 2018} & \job{Full stack Software Engineer}{DevExpress} (Infrastructure Team) \\(11 months)
     &\sotag{c\#} \sotag{.net} \sotag{soa} \sotag{asp.net mvc} \sotag{ms sql server} \sotag{security} \sotag{powershell} \sotag{rabbitmq}\\&\\
@@ -97,24 +99,25 @@
     &Maintained company CRM that integrates with site online shop, manages licenses, orders, resellers, subscriptions, payments, email newsletters, product releases, HRM\\&\\
     &In a short period, I figured out projects written on different technologies and could quickly start to bring value.\\
     &Optimized costs for \$680000 in corporate Google AdWords.\\
-    &Found a security problem that allows anyone to see all-time sales data.\\
-    &Prepared company infrastructure and services for GDPR compliance.\\
+    % &Found a security problem that allows anyone to see all-time sales data.\\
+    % &Prepared company infrastructure and services for GDPR compliance.\\
     &Speed up release pipeline (TeamCity CI) with E2E testing from 120 to 50 minutes, which increased the productivity of the team and simplified deployment.\\
-    &Member of the on-call rotation.\\\sep
+    % &Member of the on-call rotation.\\ %\sep
     % Reduce cost of maintainence by refactoring legacy code according to a new standards and best practices
     % \hline
     % \multicolumn{2}{r}{\footnotesize\itshape (abbreviated work history below, see LinkedIn profile for full details)}\\\sep
-    \textsc{Jan 2017--Apr 2017} & \job{Senior Software Engineer}{DevExpress} (Cloud file conversion service)\\(4 months)
-    &\sotag{ms azure} \sotag{asp.net mvc} \sotag{javascript} \sotag{ux prototype} \sotag{google-analytics} \sotag{html} \sotag{css}\\&\\ 
-    &An office document formats converter service, hosted in Azure Cloud Service VM.
-    It uses DevExpress office file api library, written in .Net 4.6.\\\sep
+  
+  % \textsc{Jan 2017--Apr 2017} & \job{Senior Software Engineer}{DevExpress} (Cloud file conversion service)\\(4 months)
+  %   &\sotag{ms azure} \sotag{asp.net mvc} \sotag{javascript} \sotag{ux prototype} \sotag{google-analytics} \sotag{html} \sotag{css}\\&\\ 
+  %   &An office document formats converter service, hosted in Azure Cloud Service VM.
+  %   It uses DevExpress office file api library, written in .Net 4.6.\\\sep
 
-  \textsc{Apr 2016--Aug 2016} & \job{Node.js Developer}{DevExpress} (Analytics Team), Russia \\(4 months)
-    &\sotag{node.js} \sotag{mongodb} \sotag{docker} \sotag{aws} \sotag{react.js} \sotag{javascript} \sotag{kinesis firehose}\\&\\
-    &Part time project of building Analytics dashboard and Streaming data pipeline using Amazon Kinesis, reSolve lib for backend (Event Sourcing, CQRS, DDD).\\
-    &Implemented a customer retention chart using React.js/Redux.\\
-    % &Created a React.js/Node.js project structure template.\\
-    &Added OpenID connect authentication.\\\sep
+  % \textsc{Apr 2016--Aug 2016} & \job{Node.js Developer}{DevExpress} (Analytics Team), Russia \\(4 months)
+  %   &\sotag{node.js} \sotag{mongodb} \sotag{docker} \sotag{aws} \sotag{react.js} \sotag{javascript} \sotag{kinesis firehose}\\&\\
+  %   &Part time project of building Analytics dashboard and Streaming data pipeline using Amazon Kinesis, reSolve lib for backend (Event Sourcing, CQRS, DDD).\\
+  %   &Implemented a customer retention chart using React.js/Redux.\\
+  %   % &Created a React.js/Node.js project structure template.\\
+  %   &Added OpenID connect authentication.\\\sep
     
     % \hline
     % \multicolumn{2}{r}{\footnotesize\itshape (cont. on the next page)}\\\sep
@@ -123,55 +126,55 @@
   \textsc{May 2012--Nov 2017} & \job{Senior Software Engineer}{DevExpress} (Spreadsheet Team), Russia \\(5 years, 6 months)
     &\sotag{c\#} \sotag{.net} \sotag{algorithms} \sotag{data structures} \sotag{performance} \sotag{design patterns} \sotag{excel}\\&\\
     &Developed a Spreadsheet component from the first lines of code and actively participated in product decisions and analytics.\\
-    &Developed a high performance and full-functional API to work with spreadsheet.\\
-    &Coached a team to work with Git and introduced code review practice.\\
-    &Compared the product with competitors in many aspects: features, reliability, and performance.\\
-    &Improved performance of frequently used operations and fixed many memory leaks.\\
-    &Implemented one of high-impact features Cut, Copy and Paste Operations and created 20 000 tests.\\
+    % &Developed a high performance and full-functional API to work with spreadsheet.\\
+    % &Coached a team to work with Git and introduced code review practice.\\
+    % &Compared the product with competitors in many aspects: features, reliability, and performance.\\
+    % &Improved performance of frequently used operations and fixed many memory leaks.\\
+    % &Implemented one of high-impact features Cut, Copy and Paste Operations and created 20 000 tests.\\
     &Mentored 4 new members of the team.\\\sep
  
   \textsc{Aug 2009--May 2012} & \job{Software Engineer}{DevExpress} (RichEdit Team), Russia \\(2 years, 9 months)
     &\sotag{c\#} \sotag{ms word} \sotag{api} \sotag{component} \sotag{wpf} \sotag{winforms} \sotag{xml} \sotag{docx} \sotag{doc} \sotag{rtf} \sotag{html} \\&\\
-    &Actively participated in 8 releases of Rich Text Editor component.\\
-    &Implemented support of OpenDocument (.odt) and WordprocessingML file formats.\\
-    &Added support for tables and numbered lists to import, export from HTML format.\\
-    &Created a Style Gallery in Ribbon menu for wpf version of RichEdit.\\
-    &Developed a tool for regression testing that drastically increase reliability.\\\sep
+    &Actively participated in 8 releases of Rich Text Editor component.\\\sep
+    % &Implemented support of OpenDocument (.odt) and WordprocessingML file formats.\\
+    % &Added support for tables and numbered lists to import, export from HTML format.\\
+    % &Created a Style Gallery in Ribbon menu for wpf version of RichEdit.\\
+    % &Developed a tool for regression testing that drastically increase reliability.\\\sep
 \end{longtable}
 
-\section{Programming Proficiency}
-\begin{tabular}{rl}
-  \textsc{Languages:}& GO, C\#, JavaScript (ES6)\\
-  \textsc{Patterns:}& DDD, TDD, ES/CQRS\\
-  \textsc{Libraries:}& \\
-  % \textsc{Web Prog:}& HTML, CSS, React.js, Webpack, accessibility and web performance\\
-  \textsc{DataBases:}& PostgreSQL\\ %MS SQL Server\\
-  % \textsc{Security:}& AuthN/AuthZ/OpenID connect\\
-  % \textsc{CI/CD:} Teamcity, Jenkins, Gitlab
-  % \textsc{Tools:}& Git, Visual Studio, npm, dotTrace, dotMemory, Docker, TeamCity\\
-  \textsc{Tools:}& docker, git\\
-  % \testsc{Operating Systems:}&OS X, Linux, Windows\\
-  % \testsc{:}&\\
-  % \textsc{Misc:}& Category Theory, abstract algebra (learning)
-  % \textsc{Misc:}& Agile (Scrum, Kanban),
-  % Distributed computing / cloud computing
-  % Asynchronous network programming
-  % Multi-threaded programming
-\end{tabular}
+% \section{Programming Proficiency}
+% \begin{tabular}{rl}
+%   \textsc{Languages:}& GO, C\#, JavaScript (ES6)\\
+%   \textsc{Patterns:}& DDD, TDD, ES/CQRS\\
+%   \textsc{Libraries:}& \\
+%   % \textsc{Web Prog:}& HTML, CSS, React.js, Webpack, accessibility and web performance\\
+%   \textsc{DataBases:}& PostgreSQL, MongoDB, Clickhouse\\ %MS SQL Server\\
+%   % \textsc{Security:}& AuthN/AuthZ/OpenID connect\\
+%   \textsc{CI/CD:}& Gitlab, Teamcity, Jenkins\\
+%   % \textsc{Tools:}& Git, Visual Studio, npm, dotTrace, dotMemory, Docker, TeamCity\\
+%   \textsc{Tools:}& Docker, Git\\
+%   \textsc{Operating Systems:}& MacOS, Linux\\
+%   % \textsc{:}&\\
+%   % \textsc{Misc:}& Category Theory, abstract algebra (learning)
+%   % \textsc{Misc:}& Agile (Scrum, Kanban),
+%   % Distributed computing / cloud computing
+%   % Asynchronous network programming
+%   % Multi-threaded programming
+% \end{tabular}
 
-\section{Skills and Accomplishments}
-\begin{tabular}{rl}
-  \textsc{Languages:}& English, Russian\\
-\end{tabular}
+% \section{Skills and Accomplishments}
+% \begin{tabular}{rl}
+%   \textsc{Languages:}& English, Russian\\
+% \end{tabular}
 
-\section{Specializations}
-\begin{tabular}{rl}
-  \textsc{Courses:}
-  &CI/CD for frontend-engineer master-class | javascript.ninja \\
-  &GraphQL for frontend-engineer master-class | javascript.ninja \\
-  &Unit-testing JS master-class | javascript.ninja \\
-  &Functional Programming Principles in Scala | Coursera\\
-  &Learning How to Learn | Coursera\\
-\end{tabular}
+% \section{Specializations}
+% \begin{tabular}{rl}
+%   \textsc{Courses:}
+%   &CI/CD for frontend-engineer master-class | javascript.ninja \\
+%   &GraphQL for frontend-engineer master-class | javascript.ninja \\
+%   &Unit-testing JS master-class | javascript.ninja \\
+%   &Functional Programming Principles in Scala | Coursera\\
+%   &Learning How to Learn | Coursera\\
+% \end{tabular}
 
 \end{document}
