--- a/Denis-Khranovskiy-lead-backend-eng.tex
+++ b/Denis-Khranovskiy-lead-backend-eng.tex
@@ -13,7 +13,7 @@
 \usepackage{lastpage}
 \pagestyle{fancy}
 \fancyfoot[L]{Denis Khranovskiy}
-\fancyfoot[C]{Page \thepage\ of 1} %\pageref*{LastPage}
+\fancyfoot[C]{Page \thepage\ of 2} %\pageref*{LastPage}
 \fancyfoot[R]{\today}
 \renewcommand{\footrulewidth}{0.4pt}% default is 0pt
 \fancyhead{}
@@ -142,39 +142,41 @@
     % &Developed a tool for regression testing that drastically increase reliability.\\\sep
 \end{longtable}
 
-% \section{Programming Proficiency}
-% \begin{tabular}{rl}
-%   \textsc{Languages:}& GO, C\#, JavaScript (ES6)\\
-%   \textsc{Patterns:}& DDD, TDD, ES/CQRS\\
+\section{Programming Proficiency}
+\begin{tabular}{rl}
+  \textsc{Languages:}& GO, C\#, JavaScript (ES6)\\
+  \textsc{Patterns:}& DDD, TDD, ES/CQRS\\
 %   \textsc{Libraries:}& \\
 %   % \textsc{Web Prog:}& HTML, CSS, React.js, Webpack, accessibility and web performance\\
-%   \textsc{DataBases:}& PostgreSQL, MongoDB, Clickhouse\\ %MS SQL Server\\
+  \textsc{DataBases:}& PostgreSQL, MongoDB, Clickhouse\\ %MS SQL Server\\
 %   % \textsc{Security:}& AuthN/AuthZ/OpenID connect\\
-%   \textsc{CI/CD:}& Gitlab, Teamcity, Jenkins\\
+  \textsc{CI/CD:}& Gitlab, Teamcity, Jenkins\\
 %   % \textsc{Tools:}& Git, Visual Studio, npm, dotTrace, dotMemory, Docker, TeamCity\\
 %   \textsc{Tools:}& Docker, Git\\
-%   \textsc{Operating Systems:}& MacOS, Linux\\
+  \textsc{Operating Systems:}& MacOS, Linux\\
 %   % \textsc{:}&\\
 %   % \textsc{Misc:}& Category Theory, abstract algebra (learning)
 %   % \textsc{Misc:}& Agile (Scrum, Kanban),
 %   % Distributed computing / cloud computing
 %   % Asynchronous network programming
 %   % Multi-threaded programming
-% \end{tabular}
+\end{tabular}
 
-% \section{Skills and Accomplishments}
-% \begin{tabular}{rl}
-%   \textsc{Languages:}& English, Russian\\
-% \end{tabular}
+\section{Skills and Accomplishments}
+\begin{tabular}{rl}
+  \textsc{Languages:}& English, Russian\\
+\end{tabular}
 
-% \section{Specializations}
-% \begin{tabular}{rl}
-%   \textsc{Courses:}
-%   &CI/CD for frontend-engineer master-class | javascript.ninja \\
-%   &GraphQL for frontend-engineer master-class | javascript.ninja \\
-%   &Unit-testing JS master-class | javascript.ninja \\
-%   &Functional Programming Principles in Scala | Coursera\\
-%   &Learning How to Learn | Coursera\\
-% \end{tabular}
+\section{Specializations}
+\begin{tabular}{rl}
+  \textsc{Courses:}
+  &Podlodka backend crew (2021) | podlodka.io/crew \\
+  &Podlodka team lead crew (2020) | podlodka.io/crew \\
+  &CI/CD for frontend-engineer master-class | javascript.ninja \\
+  &GraphQL for frontend-engineer master-class | javascript.ninja \\
+  &Unit-testing JS master-class | javascript.ninja \\
+  &Functional Programming Principles in Scala | Coursera\\
+  &Learning How to Learn | Coursera\\
+\end{tabular}
 
 \end{document}
