remove Specialization section

--- a/Denis-Khranovskiy-lead-backend-eng.tex
+++ b/Denis-Khranovskiy-lead-backend-eng.tex
@@ -169,31 +169,28 @@
 \section{Interests}
 \begin{tabular}{rl}
   \textsc{Interests:}
-    &Engineering management\\
-    &Practice english to pass TOEFL test\\
-    &Next langs: Elixir/Erlang, Closure, ReScript, Haskell\\
-    &Earn AWS/GCP certificate in a cloud tech\\
+    &Engineering management.\\
+    &Practice english to pass TOEFL test.\\
+    &Next langs: Elixir/Erlang, Closure, ReScript, Haskell.\\
+    &Earn AWS/GCP certificate in a cloud tech.\\
   \textsc{Hobbies:}
-    &Meditation, hikiking, cycling, cats, listen to tech podcasts\\
+    &Meditation, hikiking, cycling, cats. \\
+    &Tech podcasts.\\
 \end{tabular}
 
 \section{Skills and Accomplishments}
 \begin{tabular}{rl}
-  \textsc{Languages:}& English (Intermediate), Russian (Native)\\
-\end{tabular}
-
-\section{Specializations}
-\begin{tabular}{rl}
+  \textsc{Languages:}& English (Intermediate), Russian (Native).\\\sep
   \textsc{Courses:}
-  &Functional Programming Principles in Scala | Coursera\\
-  &Learning How to Learn | Coursera\\
+    &Functional Programming Principles in Scala | Coursera.\\
+    &Learning How to Learn | Coursera.\\\sep
   \textsc{Master-classes:}
-  &CI/CD for frontend-engineer master-class | javascript.ninja \\
-  &GraphQL for frontend-engineer master-class | javascript.ninja \\
-  &Unit-testing JS master-class | javascript.ninja \\
+    &CI/CD for frontend-engineer | javascript.ninja. \\
+    &GraphQL for frontend-engineer | javascript.ninja. \\
+    &Unit-testing JS | javascript.ninja. \\
   \textsc{Online meetups}
-  &Podlodka backend crew (2021) | podlodka.io/crew \\
-  &Podlodka team lead crew (2020) | podlodka.io/crew \\
+    &Podlodka backend crew (2021) | podlodka.io/crew. \\
+    &Podlodka team lead crew (2020) | podlodka.io/crew. \\
 \end{tabular}
 
 \end{document}
