remove manager tools section

--- a/Denis-Khranovskiy-lead-backend-eng.tex
+++ b/Denis-Khranovskiy-lead-backend-eng.tex
@@ -55,9 +55,10 @@
   \textsc{Email:}     & \href{mailto:xronosd@gmail.com}{xronosd@gmail.com}\\
   \textsc{Socials:}   %& \faHome{} \href{https://khranovsky.com}{khranovsky.com}
                       %|
-                      & \faTwitter{} \href{https://twitter.com/xronosd}{twitter} 
-                      | \faLinkedin{} \href{https://www.linkedin.com/in/denis-khranovskiy/}{linkedin}
-                      | \faGithub{} \href{https://github.com/khranovskiy/}{github}
+                      & \faTwitter{} \href{https://twitter.com/xronosd}{@xronosd} 
+                      | \faLinkedin{} \href{https://www.linkedin.com/in/denis-khranovskiy/}{denis-khranovskiy}
+                      | \faGithub{} \href{https://github.com/khranovskiy/}{@khranovskiy}
+                      % | tg \href{https://t.me/Xronosd}{@xronosd}
                       % | \faStackOverflow{} \href{https://stackoverflow.com/users/1768016/denis-khranovskiy}{stackoverflow}
 \end{tabular}
 
@@ -141,7 +142,7 @@
   \textsc{Other}& Kafka, Git, Docker, Regexp.\\
   \textsc{CI/CD}& Gitlab, Teamcity. \\
   \textsc{Performance}& for .net: dotTrace dotMemory.\\
-  \textsc{Manager tools}& One-on-One, Performance review, Followup letters, Meeting notes.\\
+  % \textsc{Manager tools}& One-on-One, Performance review, Followup letters, Meeting notes.\\
   % \textsc{Libraries:}& \\
   % \textsc{API:}& gRPC, GraphQL, REST\\
   
