fix typo: Telecommunications

--- a/Denis-Khranovskiy-lead-backend-eng.tex
+++ b/Denis-Khranovskiy-lead-backend-eng.tex
@@ -76,7 +76,7 @@
 \begin{longtable}{r|p{0.72\textwidth}}
   \textsc{Feb 2020--May 2021} & \job{Team lead - Backend}{Itoolabs} (Services Team) \\(1 year, 5 months)
     &\sotag{go} \sotag{mongoDB} \sotag{postgreSQL} \sotag{kafka} \sotag{clickhouse} \sotag{docker} \sotag{linux} \sotag{grpc} \sotag{redis}\\&\\
-    &Telecomunications. Product is highly scalable communication cluster. Billions of calls, 70 million mobile unique numbers serviced per year.\\&\\
+    &Telecommunications. Product is highly scalable communication cluster. Billions of calls, 70 million mobile unique numbers serviced per year.\\&\\
     &Led 2 teams of 5 people, grew the team from 2 to 10 a year.\\
     &Maintained 10+ services and led development of two projects (call history and billing services).\\
     &Mentored junior/middle developers, made an onboarding guide.\\
