--- a/Denis-Khranovskiy-lead-backend-eng.tex
+++ b/Denis-Khranovskiy-lead-backend-eng.tex
@@ -14,7 +14,7 @@
 \pagestyle{fancy}
 \fancyfoot[L]{Denis Khranovskiy}
 \fancyfoot[C]{Page \thepage\ of \pageref*{LastPage}}
-\fancyfoot[R]{\today}
+\fancyfoot[R]{September 3, 2021} %\today
 \renewcommand{\footrulewidth}{0.4pt}% default is 0pt
 \fancyhead{}
 \renewcommand{\headrulewidth}{0pt}
@@ -55,11 +55,11 @@
   \textsc{Email:}     & \href{mailto:xronosd@gmail.com}{xronosd@gmail.com}\\
   \textsc{Socials:}   %& \faHome{} \href{https://khranovsky.com}{khranovsky.com}
                       %|
-                      & \faTwitter{} \href{https://twitter.com/xronosd}{@xronosd} 
-                      | \faLinkedin{} \href{https://www.linkedin.com/in/denis-khranovskiy/}{denis-khranovskiy}
-                      | \faGithub{} \href{https://github.com/khranovskiy/}{@khranovskiy}
-                      % | tg \href{https://t.me/Xronosd}{@xronosd}
-                      % | \faStackOverflow{} \href{https://stackoverflow.com/users/1768016/denis-khranovskiy}{stackoverflow}
+                    & \faPaperPlane{} \href{https://t.me/Xronosd}{@xronosd}
+                    | \faTwitter{} \href{https://twitter.com/xronosd}{@xronosd} 
+                    | \faLinkedin{} \href{https://www.linkedin.com/in/denis-khranovskiy/}{denis-khranovskiy}
+                    | \faGithub{} \href{https://github.com/khranovskiy/}{@khranovskiy}
+                    % | \faStackOverflow{} \href{https://stackoverflow.com/users/1768016/denis-khranovskiy}{stackoverflow}
 \end{tabular}
 
 \section{Summary}
