--- a/Denis-Khranovskiy-lead-backend-eng.tex
+++ b/Denis-Khranovskiy-lead-backend-eng.tex
@@ -1,5 +1,6 @@
 % !TEX TS-program = lualatex
 
+% !TEX root = /Users/khranovsky/Documents/code/022-cv/Denis-Khranovskiy-lead-backend-eng.tex
 \documentclass[a4paper,11pt]{article}
 
 \usepackage[usenames,dvipsnames]{xcolor}
@@ -25,6 +26,8 @@
 \usepackage{tikz}
 \definecolor{tagbg}{RGB}{225,236,244}
 \definecolor{tagtxt}{RGB}{88,115,159}
+\definecolor{lemonchiffon}{rgb}{1.0, 0.98, 0.8}
+\definecolor{celadon}{rgb}{0.95, 1, 0.95}
 \newcommand{\sotag}[1]{\tikz[baseline]{\node[anchor=base, rounded corners=0.5ex, text height=1.5ex, text depth=.25ex, fill=tagbg, draw=tagbg, text=tagtxt] {#1};}}
 
 % Helpers for adding job entries
@@ -42,7 +45,7 @@
 \titlespacing{\section}{0pt}{1em}{3pt}
 
 \begin{document}
-
+\pagecolor{celadon}
 % --------------------TITLE-------------
 \par{\centering
 		{\Huge \textsc{Denis Khranovskiy}
@@ -182,6 +185,8 @@
 \begin{tabular}{rl}
   \textsc{Languages}& English (Intermediate), Russian (Native).\\\sep
   \textsc{Courses}
+    &Agile and Scrum in working on projects and products (2022) | Coursera.\\
+    &SQL window functions (2022) | Stepik.\\
     &Functional Programming Principles in Scala | Coursera.\\
     &Learning How to Learn | Coursera.\\\sep
   \textsc{Master-classes}
